# Hyouka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.s  test.s
debug/: demo.cpp  demo.s  test.cpp  test1.cpp
group-legacy/Frontend-WuXiwen/: README.md
source/: CMakeLists.txt  CMakeLists.txt.orig  demo.cpp  demo2.cpp  main.cpp  readme.md
source/backend/ActivityAnalysis/: ActivityAnalysis.cpp
source/backend/ActivityAnalysis/include/: ActivityAnalysis.h
source/backend/AvailableExpression/: AvailableExpression.cpp
source/backend/AvailableExpression/include/: AvailableExpression.h
source/backend/BasicBlock/: BasicBlock.cpp  readme.md
source/backend/BasicBlock/include/: BasicBlock.h
source/backend/CFG/: CFG.cpp  readme.md
source/backend/CFG/include/: CFG.h
source/backend/CFG_Yuki/: CFG_Yuki.cpp
source/backend/CFG_Yuki/include/: CFG_Yuki.h
source/backend/Define/: backend_define.cpp  define.cpp  readme.md
source/backend/Define/include/: backend_define.h  define.h
source/backend/InstructionAllocate/: InstructionAllocate.cpp  readme.md
source/backend/InstructionAllocate/include/: InstructionAllocate.h
source/backend/RegisterAllocate/: RegisterAllocate.cpp
source/backend/RegisterAllocate/include/: RegisterAllocate.h
source/front/: AST.cpp  AST.hpp  AST_expr.cpp  AST_keystmt.cpp  define.cpp  test.hpp
source/front/Define/: define.cpp
source/front/Define/include/: define.h
source/front/IRGen/: IRGen.cpp  readme.md
source/front/IRGen/include/: IRGen.h
source/front/Lexical/: Lex.cpp  README.md  readme.md  test.hpp
source/front/Lexical-Tastror/include/: Lex.h  test.hpp
source/front/Lexical-Yuki/: Lexical.cpp  Lexical.hpp  lex.yy.cpp  out.txt  test.c  testnum.c
source/front/Lexical-Yuki/flex_help/: SysY.l  SysY.lex  lex.yy.c
source/front/Lexical/include/: Lex.h  test.hpp
source/front/Optimise/: FrontOpt.cpp  readme.md
source/front/Optimise/include/: FrontOpt.h
source/front/Parsing/: AST.cpp  AST_expr.cpp  AST_keystmt.cpp  readme.md
source/front/Parsing/include/: AST.h  AST_expr.h  AST_keystmt.h
source/front/Shell/include/: shell_input.h
source/front/group-legacy/Frontend-WuXiwen/: README.md  compiler  lex.yy.cpp  make.sh  src2ast  sysy.tab.cpp
source/front/group-legacy/Frontend-WuXiwen/debug/: demo.cpp  hello.c
source/front/group-legacy/Frontend-WuXiwen/include/: ast.h
source/front/group-legacy/Frontend-WuXiwen/src/: Makefile  lex.yy.cpp  main.cpp  sysy.l  sysy.tab.cpp  sysy.tab.hpp  sysy.y
source/front/group-legacy/Lexical-Yuki/: Lexical.cpp
source/front/include/: AST.h  AST_expr.h  AST_keystmt.h  define.h
source/frontend/Define/: define.cpp  readme.md
source/frontend/Define/include/: define.h
source/frontend/IRGen/: IRGen.cpp  readme.md
source/frontend/IRGen/include/: IRGen.h
source/frontend/Lexical/: Lex.cpp
source/frontend/Lexical/include/: Lex.h
source/frontend/Optimise/: FrontOpt.cpp
source/frontend/Parsing/: AST.cpp  AST_expr.cpp  AST_keystmt.cpp
source/frontend/Shell/include/: shell_input.h
source/group-legacy/CFG_Yuki/include/: CFG_Yuki.h
source/group-legacy/Frontend-WuXiwen/: README.md
source/group-legacy/Frontend-WuXiwen/include/: ast.h
source/group-legacy/Frontend-WuXiwen/src/: lex.yy.cpp  main.cpp  sysy.y
source/group-legacy/Lexical-Yuki/: test.c
test/: demo.cpp  demo2.cpp
testcase/functional/: 00_main.tmp  01_var_defn2.s  01_var_defn2.tmp  02_var_defn3.s  02_var_defn3.tmp  03_arr_defn2.s  03_arr_defn2.tmp  04_arr_defn3.s  05_arr_defn4.s  06_const_var_defn2.s  06_const_var_defn2.tmp  07_const_var_defn3.s  07_const_var_defn3.tmp  08_const_array_defn.s  09_func_defn.s  09_func_defn.tmp  10_var_defn_func.s  10_var_defn_func.tmp  11_add2.s  11_add2.tmp  12_addc.s  12_addc.tmp  13_sub2.s  13_sub2.tmp  14_subc.s  14_subc.tmp  15_mul.s  15_mul.tmp  16_mulc.s  16_mulc.tmp  17_div.s  18_divc.s  18_divc.tmp  19_mod.s  20_rem.s  21_if_test2.s  22_if_test3.s  22_if_test3.tmp  23_if_test4.s  23_if_test4.tmp  (+87 more)
testcase/functional_out/: 00_main.s  01_var_defn2.s  02_var_defn3.s  03_arr_defn2.s  04_arr_defn3.s  05_arr_defn4.s  06_const_var_defn2.s  07_const_var_defn3.s  08_const_array_defn.s  09_func_defn.s  10_var_defn_func.s  11_add2.s  12_addc.s  13_sub2.s  14_subc.s  15_mul.s  16_mulc.s  17_div.s  18_divc.s  19_mod.s  20_rem.s  21_if_test2.s  22_if_test3.s  23_if_test4.s  24_if_test5.s  (+70 more)
util/: run_testcase.bat  test_functional.sh  test_performance.sh  test_script.sh
(+3 files in other folders)
